# Snake

./: .clangd  .gitignore  Apple.cpp  AppleEatEvent.h  CMakeLists.txt  EventPoller.cpp  EventPoller.h  Makefile  Quitter.cpp  SDLInit.cpp  SDLInit.h  SnakeMotion.cpp  main.cpp  snake  snake.h
.cache/clangd/index/: Apple.cpp.C0370FD510781CDA.idx  Apple.h.02FB2B8525625F37.idx  AppleCreator.cpp.7664AAA2F5BDBAA3.idx  AppleCreator.h.98FCB1C56A9AB16F.idx  AppleDrawer.cpp.31A8CFDBB06EE270.idx  AppleDrawer.h.16A558534C32A8BD.idx  AppleEatEvent.cpp.4063AC292F118EEF.idx  AppleEatEvent.h.C6953C2CE38C5C25.idx  AppleGO.cpp.82EFFC72AF9B63AE.idx  AppleGO.h.C8DF9A7AB63B76F6.idx  DirectionManager.cpp.05FC42C8263C1CFA.idx  DirectionManager.h.0BB35144D13DBD34.idx  DirectionSetter.cpp.AFBD11A37BF84D50.idx  DirectionSetter.h.8FFD12924E026611.idx  EventPoller.cpp.3EF834B425AEE57B.idx  EventPoller.h.CAD29CC9C9D101AA.idx  HeadUpdater.cpp.BF54BC079B733A1A.idx  HeadUpdater.h.E5C69559741B67DB.idx  IDirectionManager.h.A527BF26E36D1A63.idx  IDrawer.h.6FF9F2D5790476A5.idx  IKeyDownChannel.h.868B3FE9C2AC8FC2.idx  IMover.h.0FD06A313A082942.idx  INotifyable.h.428B6DC247A55D81.idx  ISnakeDetector.h.0FC79F2B59641E16.idx  MockNotifyable.cpp.98585BB01A0FB997.idx  MockNotifyable.h.856061D1AB5959E2.idx  Mover.cpp.CF8890224081BBC4.idx  Mover.h.D4259E94A9832BC8.idx  Pos.h.B58F76D853B241CE.idx  PositionManager.cpp.E4EEFD50EA556710.idx  PositionManager.h.183E3A79CCCFD162.idx  Quitter.cpp.093442C37BED227F.idx  Quitter.h.CE1A352DFA206719.idx  Rander.cpp.A3EB7D890191D0EF.idx  Rander.h.E542935668E5A7AF.idx  SDLInit.cpp.6D06688E8AD0EB83.idx  SDLInit.h.4D9D1FB854587ABD.idx  SnakeCreator.cpp.C61602B6D299238A.idx  SnakeCreator.h.B26DCE8B11CB09EE.idx  SnakeDetector.cpp.64096A8C83C59C76.idx  (+24 more)
include/: Apple.h  AppleEatEvent.h  EventPoller.h  IDrawer.h  IKeyDownChannel.h  INotifyable.h  MockNotifyable.h  Pos.h  PositionManager.h  Quitter.h  SDLInit.h  SnakeMotion.h  deleteMePngExper.h
include/Apple/: AppleCreator.h  AppleDrawer.h  AppleGO.h  IMover.h  ISnakeDetector.h  Mover.h  Rander.h  SnakeDetector.h
include/Snake/: DirectionManager.h  HeadUpdater.h  IDirectionManager.h  SnakeCreator.h  SnakeDrawer.h  SnakeGO.h  SnakeMotion.h  TailRemover.h
src/: Apple.cpp  AppleEatEvent.cpp  CreateApple.cpp  EventPoller.cpp  PositionManager.cpp  Quitter.cpp  SDLInit.cpp  SnakeMotion.cpp  deleteMePngExper.cpp  main.cpp
src/Apple/: AppleCreator.cpp  AppleDrawer.cpp  AppleGO.cpp  Mover.cpp  Rander.cpp  SnakeDetector.cpp
src/Snake/: DirectionManager.cpp  HeadUpdater.cpp  SnakeCreator.cpp  SnakeDrawer.cpp  SnakeGO.cpp  TailRemover.cpp
tests/: MockNotifyable.cpp  Test_PositionManager.cpp  mainTest.cpp
tests/Apple/: Test_AppleCreator.cpp  Test_AppleGo.cpp  Test_Mover.cpp  Test_Rander.cpp  Test_SnakeDetector.cpp
tests/Snake/: Test_DirectionManager.cpp  Test_HeadUpdater.cpp  Test_TailRemover.cpp
